[package]
name = "font-scaler"
version = "0.1.0"
authors = ["Fredrik Stave <fredrik.stave@vevmester.no>"]
description = "An isomorphic font scaler written in Rust for Node and JavaScript applications"
license = "MIT"
repository = "https://github.com/fredrikstave/isomorphic-font-scaler"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rusttype = "0.9.3"
wasm-bindgen = "0.2.92"
